# bids-utils

./: .autorc  .gitignore  .jscpd.json  CONTRIBUTING.md  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/workflows/: ci.yml
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md  constitution_update_checklist.md
.specify/specs/: 00-initial-design.md  000-initial-design.md
03/13578b43fc/: metadata.json
06/04dcdcb54a/: metadata.json
08/16729e7f79/: metadata.json
0d/73a6c89019/: metadata.json
0e/cffc352f3b/: metadata.json
1a/bc11550506/: metadata.json
1e/95ab52403e/: metadata.json
29/3d6f457ed9/: metadata.json
2a/56043d5e1d/: metadata.json
2a/7ffd1424d9/: metadata.json
2a/c300b095a4/: metadata.json
32/a97382dc0f/: metadata.json
39/24ee264124/: metadata.json
3e/abf6da7dff/: metadata.json
42/c05a1a8f38/: metadata.json
43/9757156f50/: metadata.json
4a/ec17249b0b/: metadata.json
50/017257698d/: metadata.json
51/478c10f63e/: metadata.json
53/8c9cb6369d/: metadata.json
54/1938f80a38/: metadata.json
5d/6abf84f905/: metadata.json
5f/2ad6ae099b/: metadata.json
61/cc4ab9ca18/: metadata.json
69/e313ea2bc1/: metadata.json
6d/2f55552e26/: metadata.json
70/03e83240de/: metadata.json
76/a8b5466a9d/: metadata.json
86/56bf187c26/: metadata.json
8a/2d1c723bd9/: metadata.json
8d/fbc7635c4f/: metadata.json
8f/44d3d0c84e/: metadata.json
90/2a7cfc1d2a/: metadata.json
9f/3e04ede657/: metadata.json
a7/2cf9028457/: metadata.json
a9/5d1626224e/: metadata.json
a9/7c91242c0b/: metadata.json
ac/75835aa773/: metadata.json
ba/11cad252d1/: metadata.json
be/9fe515efd3/: metadata.json
c4/72dec6f48b/: metadata.json
c9/63bb384041/: metadata.json
cd/9954849052/: metadata.json
d9/05ac840283/: metadata.json
docs/: index.md
docs/design/: 00-initial-design.md
tests/: conftest.py  test_annex.py  test_cli.py  test_cli_common.py  test_completion.py  test_dataset.py  test_dry_run.py  test_io.py  test_merge.py  test_metadata.py  test_migrate.py  test_participants.py  test_rename.py  test_run.py  test_scans.py  test_schema.py  test_session.py  test_sidecars.py  test_split.py  test_subject.py  test_tsv.py  test_types.py  test_vcs.py
tools/: check-duplication.sh
(+230 files in other folders)
