[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "bids-utils"
dynamic = ["version"]
description = "CLI and Python library for manipulating BIDS datasets"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "BIDS Contributors" },
]
keywords = ["bids", "neuroimaging", "brain-imaging", "data-management"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "bidsschematools>=1.0.0",
    "click>=8.0",
    "packaging>=21.0",
]

[project.optional-dependencies]
test = [
    "bids-validator-deno>=2.0",
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-timeout>=2.0",
    "pytest-xdist>=3.0",
]
devel = [
    "bids-utils[test]",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "tox>=4.0",
    "tox-uv>=1.0",
    "pylint>=3.0",
]
ci = [
    "bids-utils[devel]",
    "tox-gh-actions>=3.0",
]

[project.scripts]
bids-utils = "bids_utils.cli:main"

[project.urls]
Homepage = "https://github.com/bids-standard/bids-utils"
Repository = "https://github.com/bids-standard/bids-utils"
Issues = "https://github.com/bids-standard/bids-utils/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["src/bids_utils"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "ai_generated: marks tests as AI-generated",
    "integration: marks tests requiring bids-examples or external resources",
]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
src = ["src", "tests"]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "A", "C4", "SIM"]

[tool.codespell]
ignore-regex = "https?://\\S+"
